--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Lato:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Lato:wght@400;700&display=swap");
 
 * {
   box-sizing: border-box;
@@ -6,7 +6,7 @@
 
 body {
   margin: 0;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: linear-gradient(#29251c, #2c2306);
@@ -37,11 +37,11 @@ body {
 
 #main-header button {
   font-size: 1.5rem;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 h1 {
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-weight: 700;
   font-size: 2rem;
   margin: 0;
@@ -130,6 +130,12 @@ h1 {
 .modal-actions .text-button:hover,
 .modal-actions .text-button:active {
   color: #312c1d;
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .cart-total {
@@ -232,6 +238,26 @@ h1 {
 .text-button:hover,
 .text-button:active {
   color: #ffab04;
+}
+
+.error {
+  display: inline-block; /* Makes the div only as wide as needed */
+  max-width: 80%; /* Prevents it from being too wide */
+  padding: 10px 15px;
+  margin: 20px auto; /* Centers it vertically and horizontally */
+  background-color: #ffdddd;
+  color: #d8000c;
+  border: 1px solid #d8000c;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+
+  /* Centering the div */
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .modal {
